--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "start:sanity": "nx run sanity:serve",
     "build": "nx build",
     "build:sanity": "nx run sanity:build && nx run sanity:deploy-graphql",
-    "test": "nx affected --base=origin/feature/nextjs-rewrite --target=test",
+    "test": "nx affected --base=main --target=test",
     "tsc": "tsc",
     "type-check": "nx run-many --target type-check --all",
-    "lint": "nx affected --base=origin/feature/nextjs-rewrite --target=lint"
+    "lint": "nx affected --base=main --target=lint",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
@@ -91,11 +92,16 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "4.3.0",
+    "husky": ">=6",
     "jest": "27.2.3",
+    "lint-staged": ">=10",
     "prettier": "2.5.1",
     "react-test-renderer": "17.0.2",
     "ts-jest": "27.0.5",
     "typescript": "~4.3.5",
     "url-loader": "^3.0.0"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx,css,json,html,md}": "prettier --write"
   }
 }
