--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "start:sanity": "nx run sanity:serve",
     "build": "nx build",
     "build:sanity": "nx run sanity:build && nx run sanity:deploy-graphql",
-    "test": "nx affected --base=main --target=test",
+    "test": "nx affected --base=origin/main --target=test",
     "tsc": "tsc",
     "type-check": "nx run-many --target type-check --all",
-    "lint": "nx affected --base=main --target=lint",
+    "lint": "nx affected --base=origin/main --target=lint",
     "prepare": "husky install"
   },
   "private": true,
@@ -96,6 +96,7 @@
     "jest": "27.2.3",
     "lint-staged": ">=10",
     "prettier": "2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.7",
     "react-test-renderer": "17.0.2",
     "ts-jest": "27.0.5",
     "typescript": "~4.3.5",
