--- a/libs/cms-types/project.json
+++ b/libs/cms-types/project.json
@@ -1,5 +1,5 @@
 {
-  "root": "libs/cms-types",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/cms-types/src",
   "projectType": "library",
   "targets": {
