--- a/libs/ui/.babelrc
+++ b/libs/ui/.babelrc
@@ -1,13 +1,3 @@
 {
-  "presets": [
-    [
-      "@nrwl/react/babel",
-      {
-        "runtime": "automatic",
-        "useBuiltIns": "usage",
-        "importSource": "@emotion/react"
-      }
-    ]
-  ],
-  "plugins": ["@emotion/babel-plugin"]
+  "presets": [["@nrwl/react/babel"]]
 }
