--- a/package.json
+++ b/package.json
@@ -16,91 +16,85 @@
   },
   "private": true,
   "dependencies": {
-    "@emotion/react": "11.7.1",
-    "@emotion/server": "11.4.0",
-    "@emotion/styled": "11.6.0",
-    "@nrwl/next": "13.8.1",
-    "@sanity/base": "^2.27.0",
-    "@sanity/core": "^2.27.0",
-    "@sanity/default-layout": "^2.27.0",
-    "@sanity/default-login": "^2.27.0",
-    "@sanity/desk-tool": "^2.27.0",
-    "@sanity/vision": "^2.27.0",
+    "@nrwl/next": "14.4.2",
+    "@sanity/base": "^2.30.1",
+    "@sanity/core": "^2.30.2",
+    "@sanity/default-layout": "^2.30.1",
+    "@sanity/default-login": "^2.30.1",
+    "@sanity/desk-tool": "^2.30.1",
+    "@sanity/vision": "^2.30.1",
+    "@storybook/core-server": "6.4.22",
     "autoprefixer": "^10.4.2",
     "classnames": "^2.3.1",
     "core-js": "^3.21.0",
     "graphql": "^16.3.0",
     "graphql-request": "^3.6.1",
-    "next": "12.0.7",
+    "next": "12.1.6",
     "postcss": "^8.4.6",
     "prop-types": "^15.8.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "^4.3.1",
-    "react-is": "17.0.2",
     "regenerator-runtime": "0.13.9",
     "storybook-addon-next-router": "^3.1.1",
-    "styled-components": "^5.2.0",
+    "styled-components": "^5.3.5",
     "tailwindcss": "^3.0.22",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.13",
     "@babel/preset-typescript": "7.12.13",
-    "@emotion/babel-plugin": "11.3.0",
     "@graphql-codegen/cli": "^2.6.1",
     "@graphql-codegen/typescript": "^2.4.3",
     "@graphql-codegen/typescript-graphql-request": "^4.3.5",
     "@graphql-codegen/typescript-operations": "^2.3.0",
     "@netlify/plugin-nextjs": "^4.0.0-beta.2",
-    "@nrwl/cli": "13.8.1",
-    "@nrwl/cypress": "13.8.1",
-    "@nrwl/devkit": "13.8.1",
-    "@nrwl/eslint-plugin-nx": "13.8.1",
-    "@nrwl/jest": "13.8.1",
-    "@nrwl/linter": "13.8.1",
-    "@nrwl/react": "13.8.1",
-    "@nrwl/storybook": "13.8.1",
-    "@nrwl/tao": "13.8.1",
-    "@nrwl/web": "13.8.1",
-    "@nrwl/workspace": "13.8.1",
-    "@sanity/cli": "^2.27.0",
+    "@nrwl/cli": "14.4.2",
+    "@nrwl/cypress": "14.4.2",
+    "@nrwl/devkit": "14.4.2",
+    "@nrwl/eslint-plugin-nx": "14.4.2",
+    "@nrwl/jest": "14.4.2",
+    "@nrwl/linter": "14.4.2",
+    "@nrwl/react": "14.4.2",
+    "@nrwl/storybook": "14.4.2",
+    "@nrwl/web": "14.4.2",
+    "@nrwl/workspace": "14.4.2",
+    "@sanity/cli": "^2.30.2",
     "@storybook/addon-backgrounds": "^6.3.12",
-    "@storybook/addon-essentials": "6.4.19",
-    "@storybook/builder-webpack5": "6.4.19",
-    "@storybook/manager-webpack5": "6.4.19",
-    "@storybook/react": "6.4.19",
+    "@storybook/addon-essentials": "6.5.9",
+    "@storybook/builder-webpack5": "6.5.9",
+    "@storybook/manager-webpack5": "6.5.9",
+    "@storybook/react": "6.5.9",
     "@svgr/webpack": "^5.4.0",
-    "@testing-library/react": "12.1.2",
-    "@testing-library/react-hooks": "7.0.2",
-    "@types/jest": "27.0.2",
-    "@types/node": "14.14.33",
-    "@types/react": "17.0.30",
-    "@types/react-dom": "17.0.9",
-    "@types/react-is": "17.0.2",
-    "@types/styled-components": "^5.1.15",
-    "@typescript-eslint/eslint-plugin": "5.10.2",
-    "@typescript-eslint/parser": "5.10.2",
-    "babel-jest": "27.2.3",
+    "@testing-library/react": "13.3.0",
+    "@types/jest": "27.4.1",
+    "@types/node": "18.0.0",
+    "@types/react": "18.0.14",
+    "@types/react-dom": "18.0.5",
+    "@types/styled-components": "^5.1.25",
+    "@typescript-eslint/eslint-plugin": "5.30.6",
+    "@typescript-eslint/parser": "5.30.6",
+    "babel-jest": "27.5.1",
     "babel-loader": "8.1.0",
-    "babel-plugin-styled-components": "^1.13.3",
+    "babel-plugin-styled-components": "^2.0.7",
     "cypress": "^8.3.0",
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.7",
+    "eslint": "8.15.0",
+    "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "2.25.2",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.26.1",
-    "eslint-plugin-react-hooks": "4.3.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.0",
+    "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-react-hooks": "4.6.0",
     "husky": ">=6",
-    "jest": "27.2.3",
+    "jest": "27.5.1",
     "lint-staged": ">=10",
-    "prettier": "2.5.1",
-    "prettier-plugin-tailwindcss": "^0.1.7",
-    "react-test-renderer": "17.0.2",
-    "ts-jest": "27.0.5",
-    "typescript": "~4.3.5",
+    "nx": "14.4.2",
+    "prettier": "2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.12",
+    "react-test-renderer": "18.2.0",
+    "ts-jest": "27.1.4",
+    "typescript": "4.7.4",
     "url-loader": "^3.0.0"
   },
   "lint-staged": {
