--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "dependencies": {
     "@nrwl/next": "14.4.2",
     "@sanity/base": "^2.30.1",
+    "@sanity/client": "^3.3.2",
     "@sanity/core": "^2.30.2",
     "@sanity/default-layout": "^2.30.1",
     "@sanity/default-login": "^2.30.1",
     "@sanity/desk-tool": "^2.30.1",
+    "@sanity/image-url": "^1.0.1",
     "@sanity/vision": "^2.30.1",
     "@storybook/core-server": "6.4.22",
     "autoprefixer": "^10.4.2",
