--- a/apps/sanity/.babelrc
+++ b/apps/sanity/.babelrc
@@ -5,10 +5,17 @@
       {
         "runtime": "automatic"
       }
+    ],
+    [
+      "@babel/preset-react",
+      {
+        "runtime": "automatic"
+      }
     ]
   ],
   "plugins": [
     ["styled-components", { "pure": true, "ssr": true }],
-    ["@babel/plugin-proposal-private-methods", { "loose": false }]
+    ["@babel/plugin-proposal-private-methods", { "loose": false }],
+    ["@babel/plugin-proposal-private-property-in-object", { "loose": false }]
   ]
 }
