--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   },
   "private": true,
   "dependencies": {
+    "@mdx-js/loader": "^2.1.2",
+    "@mdx-js/react": "^2.1.2",
+    "@next/mdx": "^12.2.2",
     "@nrwl/next": "14.4.2",
     "@sanity/base": "^2.30.1",
     "@sanity/client": "^3.3.2",
@@ -31,13 +34,18 @@
     "core-js": "^3.21.0",
     "graphql": "^16.3.0",
     "graphql-request": "^3.6.1",
+    "gray-matter": "^4.0.3",
     "next": "12.1.6",
+    "next-mdx-enhanced": "^5.0.0",
     "postcss": "^8.4.6",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.3.1",
+    "reading-time": "^1.5.0",
     "regenerator-runtime": "0.13.9",
+    "remark-frontmatter": "^3.0.0",
+    "remark-prism": "^1.3.6",
     "storybook-addon-next-router": "^3.1.1",
     "styled-components": "^5.3.5",
     "tailwindcss": "^3.0.22",
@@ -68,6 +76,7 @@
     "@storybook/manager-webpack5": "6.5.9",
     "@storybook/react": "6.5.9",
     "@svgr/webpack": "^5.4.0",
+    "@tailwindcss/typography": "^0.5.4",
     "@testing-library/react": "13.3.0",
     "@types/jest": "27.4.1",
     "@types/node": "18.0.0",
