--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gray-matter": "^4.0.3",
     "next": "12.1.6",
     "next-mdx-enhanced": "^5.0.0",
+    "next-seo": "^5.4.0",
     "postcss": "^8.4.6",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
