--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mdx-js/react": "^2.1.2",
     "@next/mdx": "^12.2.2",
     "@nrwl/next": "14.4.2",
+    "@portabletext/react": "^1.0.6",
     "@sanity/base": "^2.30.1",
     "@sanity/client": "^3.3.2",
     "@sanity/core": "^2.30.2",
