--- a/apps/home/codegen.yml
+++ b/apps/home/codegen.yml
@@ -2,8 +2,8 @@ overwrite: true
 schema:
   - https://4t7pp8z5.api.sanity.io/v1/graphql/development/default
 generates:
-  libs/cms-types/src/lib/generated/generated.ts:
-    documents: "libs/cms-types/src/lib/**/*.graphql"
+  apps/home/utils/graphql/generated/generated.ts:
+    documents: "apps/home/utils/graphql/**/*.graphql"
     plugins:
       - "typescript"
       - "typescript-operations"
