--- a/package.json
+++ b/package.json
@@ -16,95 +16,97 @@
   },
   "private": true,
   "dependencies": {
-    "@mdx-js/loader": "^2.1.2",
-    "@mdx-js/react": "^2.1.2",
-    "@next/mdx": "^12.2.2",
-    "@nrwl/next": "14.4.2",
+    "@mdx-js/loader": "^2.2.1",
+    "@mdx-js/react": "^2.2.1",
+    "@next/mdx": "^13.1.1",
+    "@nrwl/next": "15.4.1",
     "@portabletext/react": "^1.0.6",
-    "@sanity/base": "^2.30.1",
-    "@sanity/client": "^3.3.2",
-    "@sanity/core": "^2.30.2",
-    "@sanity/default-layout": "^2.30.1",
-    "@sanity/default-login": "^2.30.1",
-    "@sanity/desk-tool": "^2.30.1",
+    "@sanity/base": "^2.35.2",
+    "@sanity/client": "^3.4.1",
+    "@sanity/core": "^2.35.0",
+    "@sanity/default-layout": "^2.35.2",
+    "@sanity/default-login": "^2.35.2",
+    "@sanity/desk-tool": "^2.35.2",
     "@sanity/image-url": "^1.0.1",
     "@sanity/vision": "^2.30.1",
-    "@storybook/core-server": "6.4.22",
-    "autoprefixer": "^10.4.2",
-    "classnames": "^2.3.1",
+    "@storybook/core-server": "6.5.15",
+    "autoprefixer": "10.4.13",
+    "classnames": "^2.3.2",
     "core-js": "^3.21.0",
-    "graphql": "^16.3.0",
+    "graphql": "^16.6.0",
     "graphql-request": "^3.6.1",
     "gray-matter": "^4.0.3",
-    "next": "12.1.6",
+    "next": "13.0.0",
     "next-mdx-enhanced": "^5.0.0",
-    "next-seo": "^5.4.0",
-    "postcss": "^8.4.6",
+    "next-seo": "^5.15.0",
+    "postcss": "8.4.20",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.3.1",
+    "react-icons": "^4.7.1",
     "reading-time": "^1.5.0",
-    "regenerator-runtime": "0.13.9",
+    "regenerator-runtime": "0.13.11",
     "remark-frontmatter": "^3.0.0",
     "remark-prism": "^1.3.6",
     "storybook-addon-next-router": "^3.1.1",
-    "styled-components": "^5.3.5",
-    "tailwindcss": "^3.0.22",
+    "styled-components": "5.3.6",
+    "tailwindcss": "3.2.4",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.13",
+    "@babel/plugin-proposal-export-default-from": "^7.18.10",
     "@babel/preset-typescript": "7.12.13",
-    "@graphql-codegen/cli": "^2.6.1",
-    "@graphql-codegen/typescript": "^2.4.3",
-    "@graphql-codegen/typescript-graphql-request": "^4.3.5",
-    "@graphql-codegen/typescript-operations": "^2.3.0",
-    "@netlify/plugin-nextjs": "^4.0.0-beta.2",
-    "@nrwl/cli": "14.4.2",
-    "@nrwl/devkit": "14.4.2",
-    "@nrwl/eslint-plugin-nx": "14.4.2",
-    "@nrwl/jest": "14.4.2",
-    "@nrwl/linter": "14.4.2",
-    "@nrwl/react": "14.4.2",
-    "@nrwl/storybook": "14.4.2",
-    "@nrwl/web": "14.4.2",
-    "@nrwl/workspace": "14.4.2",
+    "@graphql-codegen/cli": "^2.16.1",
+    "@graphql-codegen/typescript": "^2.8.5",
+    "@graphql-codegen/typescript-graphql-request": "^4.5.8",
+    "@graphql-codegen/typescript-operations": "^2.5.10",
+    "@nrwl/cli": "15.4.1",
+    "@nrwl/devkit": "15.4.1",
+    "@nrwl/eslint-plugin-nx": "15.4.1",
+    "@nrwl/jest": "15.4.1",
+    "@nrwl/linter": "15.4.1",
+    "@nrwl/react": "15.4.1",
+    "@nrwl/storybook": "15.4.1",
+    "@nrwl/web": "15.4.1",
+    "@nrwl/workspace": "15.4.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@sanity/cli": "^2.30.2",
-    "@storybook/addon-backgrounds": "^6.3.12",
-    "@storybook/addon-essentials": "6.5.9",
-    "@storybook/builder-webpack5": "6.5.9",
-    "@storybook/manager-webpack5": "6.5.9",
-    "@storybook/react": "6.5.9",
+    "@storybook/addon-backgrounds": "^6.5.15",
+    "@storybook/addon-essentials": "6.5.15",
+    "@storybook/builder-webpack5": "6.5.15",
+    "@storybook/manager-webpack5": "6.5.15",
+    "@storybook/react": "6.5.15",
     "@svgr/webpack": "^5.4.0",
-    "@tailwindcss/typography": "^0.5.4",
-    "@testing-library/react": "13.3.0",
-    "@types/jest": "27.4.1",
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
-    "@types/styled-components": "^5.1.25",
-    "@typescript-eslint/eslint-plugin": "5.30.6",
-    "@typescript-eslint/parser": "5.30.6",
-    "babel-jest": "27.5.1",
+    "@tailwindcss/typography": "^0.5.8",
+    "@testing-library/react": "13.4.0",
+    "@types/jest": "28.1.8",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
+    "@types/styled-components": "5.1.26",
+    "@typescript-eslint/eslint-plugin": "5.47.1",
+    "@typescript-eslint/parser": "5.47.1",
+    "babel-jest": "28.1.3",
     "babel-loader": "8.1.0",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "13.0.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.6.0",
-    "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
-    "husky": ">=6",
-    "jest": "27.5.1",
+    "husky": ">=8.0.2",
+    "jest": "28.1.3",
+    "jest-environment-jsdom": "^29.3.1",
     "lint-staged": ">=10",
-    "nx": "14.4.2",
-    "prettier": "2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.12",
+    "nx": "15.4.1",
+    "prettier": "2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "react-test-renderer": "18.2.0",
-    "ts-jest": "27.1.4",
-    "typescript": "4.7.4",
+    "ts-jest": "28.0.8",
+    "typescript": "4.8.4",
     "url-loader": "^3.0.0"
   },
   "lint-staged": {
