--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@mdx-js/loader": "^2.2.1",
     "@mdx-js/react": "^2.2.1",
     "@next/mdx": "^13.1.1",
-    "@nrwl/next": "15.4.1",
+    "@nrwl/next": "15.8.5",
     "@portabletext/react": "^1.0.6",
     "@sanity/base": "^2.35.2",
     "@sanity/client": "^3.4.1",
@@ -29,14 +29,14 @@
     "@sanity/desk-tool": "^2.35.2",
     "@sanity/image-url": "^1.0.1",
     "@sanity/vision": "^2.30.1",
-    "@storybook/core-server": "6.5.15",
+    "@storybook/core-server": "6.5.16",
     "autoprefixer": "10.4.13",
     "classnames": "^2.3.2",
     "core-js": "^3.21.0",
     "graphql": "^16.6.0",
     "graphql-request": "^3.6.1",
     "gray-matter": "^4.0.3",
-    "next": "13.0.0",
+    "next": "13.1.1",
     "next-mdx-enhanced": "^5.0.0",
     "next-seo": "^5.15.0",
     "postcss": "8.4.20",
@@ -54,60 +54,65 @@
     "tslib": "^2.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.12.13",
+    "@babel/core": "7.21.0",
     "@babel/plugin-proposal-export-default-from": "^7.18.10",
-    "@babel/preset-typescript": "7.12.13",
+    "@babel/preset-typescript": "7.21.0",
     "@graphql-codegen/cli": "^2.16.1",
     "@graphql-codegen/typescript": "^2.8.5",
     "@graphql-codegen/typescript-graphql-request": "^4.5.8",
     "@graphql-codegen/typescript-operations": "^2.5.10",
-    "@nrwl/cli": "15.4.1",
-    "@nrwl/devkit": "15.4.1",
-    "@nrwl/eslint-plugin-nx": "15.4.1",
-    "@nrwl/jest": "15.4.1",
-    "@nrwl/linter": "15.4.1",
-    "@nrwl/react": "15.4.1",
-    "@nrwl/storybook": "15.4.1",
-    "@nrwl/web": "15.4.1",
-    "@nrwl/workspace": "15.4.1",
+    "@nrwl/cli": "15.8.5",
+    "@nrwl/devkit": "15.8.5",
+    "@nrwl/eslint-plugin-nx": "15.8.5",
+    "@nrwl/jest": "15.8.5",
+    "@nrwl/js": "15.8.5",
+    "@nrwl/linter": "15.8.5",
+    "@nrwl/react": "15.8.5",
+    "@nrwl/storybook": "15.8.5",
+    "@nrwl/web": "15.8.5",
+    "@nrwl/webpack": "15.8.5",
+    "@nrwl/workspace": "15.8.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@sanity/cli": "^2.30.2",
-    "@storybook/addon-backgrounds": "^6.5.15",
-    "@storybook/addon-essentials": "6.5.15",
-    "@storybook/builder-webpack5": "6.5.15",
-    "@storybook/manager-webpack5": "6.5.15",
-    "@storybook/react": "6.5.15",
+    "@storybook/addon-backgrounds": "^6.5.16",
+    "@storybook/addon-essentials": "6.5.16",
+    "@storybook/builder-vite": "^0.4.2",
+    "@storybook/react": "6.5.16",
     "@svgr/webpack": "^5.4.0",
-    "@tailwindcss/typography": "^0.5.8",
+    "@tailwindcss/typography": "^0.5.9",
     "@testing-library/react": "13.4.0",
-    "@types/jest": "28.1.8",
+    "@types/jest": "29.4.0",
     "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
     "@types/styled-components": "5.1.26",
-    "@typescript-eslint/eslint-plugin": "5.47.1",
-    "@typescript-eslint/parser": "5.47.1",
-    "babel-jest": "28.1.3",
+    "@typescript-eslint/eslint-plugin": "5.54.1",
+    "@typescript-eslint/parser": "5.54.1",
+    "@vitejs/plugin-react-swc": "^3.2.0",
+    "babel-jest": "29.4.3",
     "babel-loader": "8.1.0",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.15.0",
-    "eslint-config-next": "13.0.0",
+    "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
-    "husky": ">=8.0.2",
-    "jest": "28.1.3",
-    "jest-environment-jsdom": "^29.3.1",
-    "lint-staged": ">=10",
-    "nx": "15.4.1",
-    "prettier": "2.8.1",
-    "prettier-plugin-tailwindcss": "^0.2.1",
+    "husky": ">=8.0.3",
+    "jest": "29.4.3",
+    "jest-environment-jsdom": "29.4.3",
+    "lint-staged": ">=13.1.2",
+    "nx": "15.8.5",
+    "prettier": "2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.4",
     "react-test-renderer": "18.2.0",
-    "ts-jest": "28.0.8",
-    "typescript": "4.8.4",
-    "url-loader": "^3.0.0"
+    "storybook-addon-swc": "^1.1.9",
+    "ts-jest": "29.0.5",
+    "typescript": "4.9.5",
+    "url-loader": "^3.0.0",
+    "vite": "^4.1.4",
+    "vite-tsconfig-paths": "^4.0.5"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,css,json,html,md}": "prettier --write"
