Upgrade Sanity to v3 🔥

--- a/apps/sanity/project.json
+++ b/apps/sanity/project.json
@@ -13,7 +13,7 @@
     "serve": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "yarn sanity start"
+        "command": "yarn sanity dev"
       }
     },
     "deploy-graphql": {
