--- a/package.json
+++ b/package.json
@@ -21,14 +21,9 @@
     "@next/mdx": "^13.1.1",
     "@nrwl/next": "15.8.5",
     "@portabletext/react": "^1.0.6",
-    "@sanity/base": "^2.35.2",
     "@sanity/client": "^3.4.1",
-    "@sanity/core": "^2.35.0",
-    "@sanity/default-layout": "^2.35.2",
-    "@sanity/default-login": "^2.35.2",
-    "@sanity/desk-tool": "^2.35.2",
     "@sanity/image-url": "^1.0.1",
-    "@sanity/vision": "^2.30.1",
+    "@sanity/vision": "^3.6.0",
     "@storybook/core-server": "6.5.16",
     "autoprefixer": "10.4.13",
     "classnames": "^2.3.2",
@@ -48,6 +43,7 @@
     "regenerator-runtime": "0.13.11",
     "remark-frontmatter": "^3.0.0",
     "remark-prism": "^1.3.6",
+    "sanity": "^3.6.0",
     "storybook-addon-next-router": "^3.1.1",
     "styled-components": "5.3.8",
     "tailwindcss": "3.2.7",
