Remove unused ref; add type-check to sanity

--- a/apps/sanity/tsconfig.json
+++ b/apps/sanity/tsconfig.json
@@ -11,7 +11,7 @@
     "noFallthroughCasesInSwitch": true
   },
   "files": [],
-  "include": ["../../node_modules/@sanity/base/types/**/*.ts"],
+  "include": [],
   "references": [
     {
       "path": "./tsconfig.app.json"
