--- a/apps/sanity/project.json
+++ b/apps/sanity/project.json
@@ -28,6 +28,12 @@
       "options": {
         "lintFilePatterns": ["apps/sanity/**/*.{ts,tsx,js,jsx}"]
       }
+    },
+    "type-check": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "yarn tsc -p apps/home/tsconfig.json --noEmit"
+      }
     }
   },
   "tags": []
