--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.6.0",
     "@storybook/core-server": "6.5.16",
+    "@vercel/analytics": "^0.1.11",
     "autoprefixer": "10.4.13",
     "classnames": "^2.3.2",
     "core-js": "^3.29.0",
