--- a/package.json
+++ b/package.json
@@ -51,9 +51,6 @@
     "tslib": "^2.5.0"
   },
   "devDependencies": {
-    "@babel/core": "7.21.0",
-    "@babel/plugin-proposal-export-default-from": "^7.18.10",
-    "@babel/preset-typescript": "7.21.0",
     "@graphql-codegen/cli": "^3.2.2",
     "@graphql-codegen/typescript": "^3.0.2",
     "@graphql-codegen/typescript-graphql-request": "^4.5.8",
@@ -76,6 +73,8 @@
     "@storybook/builder-vite": "^0.4.2",
     "@storybook/react": "6.5.16",
     "@svgr/webpack": "^5.4.0",
+    "@swc/core": "^1.3.39",
+    "@swc/jest": "^0.2.24",
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/react": "13.4.0",
     "@types/jest": "29.4.0",
@@ -86,9 +85,6 @@
     "@typescript-eslint/eslint-plugin": "5.54.1",
     "@typescript-eslint/parser": "5.54.1",
     "@vitejs/plugin-react-swc": "^3.2.0",
-    "babel-jest": "29.4.3",
-    "babel-loader": "8.1.0",
-    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.15.0",
     "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "8.1.0",
