--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@next/mdx": "^13.1.1",
     "@nrwl/next": "15.8.5",
     "@portabletext/react": "^2.0.2",
-    "@sanity/client": "^3.4.1",
+    "@sanity/client": "^5.3.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.6.0",
     "@storybook/core-server": "6.5.16",
@@ -32,6 +32,7 @@
     "graphql": "^16.6.0",
     "graphql-request": "^3.6.1",
     "gray-matter": "^4.0.3",
+    "groq": "^3.6.0",
     "next": "13.1.1",
     "next-mdx-enhanced": "^5.0.0",
     "next-seo": "^5.15.0",
