--- a/apps/home/project.json
+++ b/apps/home/project.json
@@ -58,18 +58,6 @@
         "lintFilePatterns": ["apps/home/**/*.{ts,tsx,js,jsx}"]
       }
     },
-    "cms-generate": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "yarn graphql-codegen --config apps/home/codegen.yml"
-      }
-    },
-    "cms-generate-watch": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "yarn graphql-codegen --config apps/home/codegen.yml --watch"
-      }
-    },
     "type-check": {
       "executor": "nx:run-commands",
       "options": {
@@ -79,12 +67,7 @@
     "dev": {
       "executor": "nx:run-commands",
       "options": {
-        "commands": [
-          "yarn nx run home:serve",
-          "yarn nx run home:cms-generate-watch",
-          "yarn nx run sanity:serve",
-          "yarn nx run ui:storybook"
-        ],
+        "commands": ["yarn nx run home:serve", "yarn nx run sanity:serve", "yarn nx run ui:storybook"],
         "parallel": true,
         "color": true
       }
