--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@next/mdx": "^13.1.1",
     "@nrwl/next": "15.8.5",
     "@portabletext/react": "^2.0.2",
-    "@sanity/client": "^3.4.1",
+    "@sanity/client": "^5.3.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.6.0",
     "@storybook/core-server": "6.5.16",
@@ -29,9 +29,8 @@
     "autoprefixer": "10.4.13",
     "classnames": "^2.3.2",
     "core-js": "^3.29.0",
-    "graphql": "^16.6.0",
-    "graphql-request": "^3.6.1",
     "gray-matter": "^4.0.3",
+    "groq": "^3.6.0",
     "next": "13.1.1",
     "next-mdx-enhanced": "^5.0.0",
     "next-seo": "^5.15.0",
@@ -51,10 +50,6 @@
     "tslib": "^2.5.0"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^3.2.2",
-    "@graphql-codegen/typescript": "^3.0.2",
-    "@graphql-codegen/typescript-graphql-request": "^4.5.8",
-    "@graphql-codegen/typescript-operations": "^3.0.2",
     "@nrwl/cli": "15.8.5",
     "@nrwl/devkit": "15.8.5",
     "@nrwl/eslint-plugin-nx": "15.8.5",
