--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nx run home:dev",
+    "dev-all": "nx run home:dev-all",
     "start": "nx serve",
     "start:sanity": "nx run sanity:serve",
     "build": "nx build",
@@ -100,7 +101,7 @@
     "typescript": "4.9.5",
     "url-loader": "^3.0.0",
     "vite": "^4.1.4",
-    "vite-tsconfig-paths": "^4.0.5"
+    "vite-tsconfig-paths": "^4.0.7"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,css,json,html,md}": "prettier --write"
