--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nrwl/next": "15.8.5",
     "@portabletext/react": "^2.0.2",
     "@sanity/client": "^5.3.0",
+    "@sanity/code-input": "^4.1.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.6.0",
     "@storybook/core-server": "6.5.16",
@@ -36,6 +37,7 @@
     "next-mdx-enhanced": "^5.0.0",
     "next-seo": "^5.15.0",
     "postcss": "8.4.20",
+    "prism-react-renderer": "^1.3.5",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
