--- a/package.json
+++ b/package.json
@@ -17,12 +17,10 @@
   },
   "private": true,
   "dependencies": {
-    "@mdx-js/loader": "^2.3.0",
-    "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "^13.1.1",
     "@nrwl/next": "15.8.5",
     "@portabletext/react": "^2.0.2",
     "@sanity/client": "^5.3.0",
+    "@sanity/code-input": "^4.1.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.6.0",
     "@storybook/core-server": "6.5.16",
@@ -30,20 +28,15 @@
     "autoprefixer": "10.4.13",
     "classnames": "^2.3.2",
     "core-js": "^3.29.0",
-    "gray-matter": "^4.0.3",
     "groq": "^3.6.0",
     "next": "13.1.1",
-    "next-mdx-enhanced": "^5.0.0",
     "next-seo": "^5.15.0",
     "postcss": "8.4.20",
-    "prop-types": "^15.8.1",
+    "prism-react-renderer": "^1.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "reading-time": "^1.5.0",
     "regenerator-runtime": "0.13.11",
-    "remark-frontmatter": "^4.0.1",
-    "remark-prism": "^1.3.6",
     "sanity": "^3.6.0",
     "storybook-addon-next-router": "^3.1.1",
     "styled-components": "5.3.8",
@@ -97,7 +90,7 @@
     "prettier-plugin-tailwindcss": "^0.2.4",
     "react-test-renderer": "18.2.0",
     "storybook-addon-swc": "^1.1.9",
-    "ts-jest": "29.0.5",
+    "ts-jest": "^29.0.5",
     "typescript": "4.9.5",
     "url-loader": "^3.0.0",
     "vite": "^4.1.4",
