--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@binoy14/ui": ["libs/ui/src/index.ts"]
+      "@binoy14/ui": ["libs/ui/src/index.ts"],
+      "@binoy14/workspace-plugin": ["tools/workspace-plugin/src/index.ts"]
     },
     "strict": true
   },
