--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "private": true,
   "dependencies": {
+    "@nx/next": "16.3.2",
     "@portabletext/react": "^2.0.2",
     "@sanity/client": "^5.4.0",
     "@sanity/code-input": "^4.1.0",
@@ -31,32 +32,34 @@
     "groq": "^3.6.0",
     "next": "13.3.0",
     "next-seo": "^5.15.0",
-    "postcss": "8.4.20",
+    "postcss": "8.4.24",
     "prism-react-renderer": "^1.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "regenerator-runtime": "0.13.11",
     "sanity": "^3.8.1",
-    "storybook-addon-next-router": "^4.0.2",
     "styled-components": "5.3.8",
     "tailwindcss": "3.2.7",
-    "tslib": "^2.5.0",
-    "@nx/next": "16.3.2"
+    "tslib": "^2.5.0"
   },
   "devDependencies": {
     "@nx/devkit": "16.3.2",
+    "@nx/eslint-plugin": "16.3.2",
     "@nx/jest": "16.3.2",
     "@nx/js": "16.3.2",
     "@nx/linter": "16.3.2",
     "@nx/plugin": "16.3.2",
     "@nx/react": "16.3.2",
     "@nx/storybook": "16.3.2",
+    "@nx/web": "16.3.2",
+    "@nx/webpack": "16.3.2",
     "@nx/workspace": "16.3.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@sanity/cli": "^3.6.0",
     "@storybook/addon-backgrounds": "^7.0.21",
     "@storybook/addon-essentials": "7.0.21",
+    "@storybook/nextjs": "^7.0.21",
     "@storybook/react": "7.0.21",
     "@storybook/react-vite": "7.0.21",
     "@svgr/webpack": "8.0.1",
@@ -97,10 +100,7 @@
     "typescript": "5.0.4",
     "url-loader": "^3.0.0",
     "vite": "^4.1.4",
-    "vite-tsconfig-paths": "^4.0.7",
-    "@nx/eslint-plugin": "16.3.2",
-    "@nx/webpack": "16.3.2",
-    "@nx/web": "16.3.2"
+    "vite-tsconfig-paths": "^4.0.7"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,css,json,html,md}": "prettier --write"
