--- a/package.json
+++ b/package.json
@@ -18,30 +18,26 @@
   "private": true,
   "dependencies": {
     "@nx/next": "16.3.2",
-    "@portabletext/react": "^2.0.2",
-    "@sanity/client": "^5.4.0",
-    "@sanity/code-input": "^4.1.0",
+    "@portabletext/react": "^3.0.2",
+    "@sanity/client": "^5.4.2",
+    "@sanity/code-input": "^4.1.1",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.8.1",
-    "@storybook/core-server": "7.0.21",
-    "@swc/helpers": "~0.5.0",
-    "@vercel/analytics": "^0.1.11",
-    "autoprefixer": "10.4.13",
+    "@sanity/vision": "^3.12.1",
+    "@vercel/analytics": "^1.0.1",
     "classnames": "^2.3.2",
-    "core-js": "^3.29.0",
-    "groq": "^3.6.0",
+    "core-js": "^3.31.0",
+    "groq": "^3.12.1",
     "next": "13.3.0",
     "next-seo": "^5.15.0",
-    "postcss": "8.4.24",
     "prism-react-renderer": "^1.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.9.0",
     "regenerator-runtime": "0.13.11",
-    "sanity": "^3.8.1",
+    "sanity": "^3.12.1",
     "styled-components": "5.3.8",
-    "tailwindcss": "3.2.7",
-    "tslib": "^2.5.0"
+    "tailwindcss": "3.3.2",
+    "tslib": "^2.5.3"
   },
   "devDependencies": {
     "@nx/devkit": "16.3.2",
@@ -56,17 +52,20 @@
     "@nx/webpack": "16.3.2",
     "@nx/workspace": "16.3.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
-    "@sanity/cli": "^3.6.0",
+    "@portabletext/types": "^2.0.2",
+    "@sanity/cli": "^3.12.1",
     "@storybook/addon-backgrounds": "^7.0.21",
     "@storybook/addon-essentials": "7.0.21",
+    "@storybook/core-server": "7.0.21",
     "@storybook/nextjs": "^7.0.21",
     "@storybook/react": "7.0.21",
     "@storybook/react-vite": "7.0.21",
     "@svgr/webpack": "8.0.1",
     "@swc-node/register": "~1.4.2",
     "@swc/cli": "~0.1.62",
-    "@swc/core": "~1.3.51",
-    "@swc/jest": "^0.2.24",
+    "@swc/core": "~1.3.64",
+    "@swc/helpers": "~0.5.1",
+    "@swc/jest": "^0.2.26",
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/react": "13.4.0",
     "@types/jest": "29.4.0",
@@ -76,7 +75,8 @@
     "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "5.59.11",
     "@typescript-eslint/parser": "5.59.11",
-    "@vitejs/plugin-react-swc": "^3.2.0",
+    "@vitejs/plugin-react-swc": "^3.3.2",
+    "autoprefixer": "10.4.14",
     "eslint": "8.15.0",
     "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "8.1.0",
@@ -88,19 +88,20 @@
     "husky": ">=8.0.3",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
-    "jsonc-eslint-parser": "^2.1.0",
-    "lint-staged": ">=13.1.2",
+    "jsonc-eslint-parser": "^2.3.0",
+    "lint-staged": "^13.2.2",
     "nx": "16.3.2",
-    "prettier": "2.8.4",
-    "prettier-plugin-tailwindcss": "^0.2.4",
+    "prettier": "2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8",
+    "postcss": "8.4.24",
     "storybook": "7.0.21",
     "storybook-addon-swc": "^1.2.0",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
     "typescript": "5.0.4",
-    "url-loader": "^3.0.0",
-    "vite": "^4.1.4",
-    "vite-tsconfig-paths": "^4.0.7"
+    "url-loader": "^4.1.1",
+    "vite": "^4.3.9",
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,css,json,html,md}": "prettier --write"
