chore: replace jest with vitest

--- a/libs/ui/.storybook/tsconfig.json
+++ b/libs/ui/.storybook/tsconfig.json
@@ -17,8 +17,7 @@
     "../**/*.spec.tsx",
     "../**/*.test.tsx",
     "../**/*.spec.jsx",
-    "../**/*.test.jsx",
-    "jest.config.ts"
+    "../**/*.test.jsx"
   ],
   "include": ["../src/**/*", "*.js"]
 }
