--- a/tools/workspace-plugin/src/generators/sanity-schema/tsconfig.json
+++ b/tools/workspace-plugin/src/generators/sanity-schema/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.tools.json",
+  "extends": "../../../tsconfig.json",
   "compilerOptions": {
     "strict": true
   },
