--- a/apps/home/project.json
+++ b/apps/home/project.json
@@ -43,10 +43,9 @@
       }
     },
     "test": {
-      "executor": "@nx/jest:jest",
+      "executor": "@nx/vite:test",
       "outputs": ["{workspaceRoot}/coverage/apps/home"],
       "options": {
-        "jestConfig": "apps/home/jest.config.ts",
         "passWithNoTests": true
       }
     },
