--- a/libs/ui/project.json
+++ b/libs/ui/project.json
@@ -13,10 +13,9 @@
       }
     },
     "test": {
-      "executor": "@nx/jest:jest",
+      "executor": "@nx/vite:test",
       "outputs": ["{workspaceRoot}/coverage/libs/ui"],
       "options": {
-        "jestConfig": "libs/ui/jest.config.ts",
         "passWithNoTests": true
       }
     },
