--- a/package.json
+++ b/package.json
@@ -42,12 +42,12 @@
   "devDependencies": {
     "@nx/devkit": "16.3.2",
     "@nx/eslint-plugin": "16.3.2",
-    "@nx/jest": "16.3.2",
     "@nx/js": "16.3.2",
     "@nx/linter": "16.3.2",
     "@nx/plugin": "16.3.2",
     "@nx/react": "16.3.2",
     "@nx/storybook": "16.3.2",
+    "@nx/vite": "^16.3.2",
     "@nx/web": "16.3.2",
     "@nx/webpack": "16.3.2",
     "@nx/workspace": "16.3.2",
@@ -65,10 +65,8 @@
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.64",
     "@swc/helpers": "~0.5.1",
-    "@swc/jest": "^0.2.26",
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/react": "13.4.0",
-    "@types/jest": "29.4.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -76,6 +74,8 @@
     "@typescript-eslint/eslint-plugin": "5.59.11",
     "@typescript-eslint/parser": "5.59.11",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "@vitest/coverage-c8": "^0.31.0",
+    "@vitest/ui": "^0.31.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.15.0",
     "eslint-config-next": "13.1.1",
@@ -86,22 +86,22 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-storybook": "^0.6.12",
     "husky": ">=8.0.3",
-    "jest": "29.4.3",
-    "jest-environment-jsdom": "29.4.3",
+    "jsdom": "~20.0.3",
     "jsonc-eslint-parser": "^2.3.0",
     "lint-staged": "^13.2.2",
     "nx": "16.3.2",
+    "postcss": "8.4.24",
     "prettier": "2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
-    "postcss": "8.4.24",
     "storybook": "7.0.21",
     "storybook-addon-swc": "^1.2.0",
-    "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
     "typescript": "5.0.4",
     "url-loader": "^4.1.1",
     "vite": "^4.3.9",
-    "vite-tsconfig-paths": "^4.2.0"
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.31.0"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,css,json,html,md}": "prettier --write"
