chore(renovate): add rebase rule

--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
+  "rebaseWhen": "behind-base-branch",
   "packageRules": [
     {
       "packagePatterns": ["^@nx/", "^@swc/", "^storybook", "^@storybook/"],
