chore(renovate): limit PRs to 5

--- a/renovate.json
+++ b/renovate.json
@@ -10,5 +10,6 @@
   ],
   "ignoreDeps": ["nx", "react", "react-dom", "next"],
   "labels": ["🤖 bot", "📦 dependencies"],
-  "rangeStrategy": "pin"
+  "rangeStrategy": "pin",
+  "prConcurrentLimit": 5
 }
