--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "tslib": "2.6.2"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^2.1.1",
+    "@eslint/js": "~8.46.0",
     "@nx/devkit": "17.0.2",
+    "@nx/eslint": "17.0.2",
     "@nx/eslint-plugin": "17.0.2",
     "@nx/js": "17.0.2",
     "@nx/next": "17.0.2",
@@ -73,7 +76,7 @@
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "@vitejs/plugin-react-swc": "3.4.0",
-    "@vitest/coverage-c8": "0.33.0",
+    "@vitest/coverage-v8": "0.34.6",
     "@vitest/ui": "0.34.6",
     "autoprefixer": "10.4.16",
     "eslint": "8.52.0",
@@ -86,7 +89,6 @@
     "eslint-plugin-storybook": "0.6.15",
     "husky": "8.0.3",
     "jsdom": "22.1.0",
-    "jsonc-eslint-parser": "2.3.0",
     "lint-staged": "15.0.2",
     "nx": "17.0.2",
     "postcss": "8.4.31",
@@ -100,8 +102,7 @@
     "vite": "4.5.0",
     "vite-plugin-eslint": "1.8.1",
     "vite-tsconfig-paths": "4.2.1",
-    "vitest": "0.34.6",
-    "@nx/eslint": "17.0.2"
+    "vitest": "0.34.6"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,css,json,html,md}": "prettier --write"
