chore(deps): update storybook monorepo

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "@storybook/addon-backgrounds": "7.5.2",
     "@storybook/addon-essentials": "7.5.2",
     "@storybook/core-server": "7.5.2",
-    "@storybook/nextjs": "^7.0.21",
+    "@storybook/nextjs": "7.5.2",
     "@storybook/react": "7.5.2",
     "@storybook/react-vite": "7.5.2",
     "@svgr/webpack": "8.1.0",
@@ -93,7 +93,7 @@
     "postcss": "8.4.31",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "0.5.6",
-    "storybook": "7.0.21",
+    "storybook": "7.5.2",
     "storybook-addon-swc": "^1.2.0",
     "ts-node": "10.9.1",
     "typescript": "5.2.2",
