chore(renovate): update renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -17,7 +17,9 @@
       "packagePatterns": ["^@nrwl/", "nx", "^@nx/"],
       "groupName": "NX workspace",
       "postUpgradeTasks": {
-        "commands": ["npx nx migrate latest", "npx nx migrate --run-migrations"],
+        "commands": [
+          "npx nx migrate latest --run-migrations --create-commits --commit-message='chore(repo): update @nx dependencies'"
+        ],
         "fileFilters": ["**/**"]
       }
     }
