Revert "chore(renovate): update renovate.json"
This reverts commit b14b20aa630a179c112f680afacc720095efd41d.

--- a/renovate.json
+++ b/renovate.json
@@ -17,9 +17,7 @@
       "packagePatterns": ["^@nrwl/", "nx", "^@nx/"],
       "groupName": "NX workspace",
       "postUpgradeTasks": {
-        "commands": [
-          "npx nx migrate latest --run-migrations --create-commits --commit-message='chore(repo): update @nx dependencies'"
-        ],
+        "commands": ["npx nx migrate latest", "npx nx migrate --run-migrations"],
         "fileFilters": ["**/**"]
       }
     }
