revert renovate changes (#145)
* Revert "chore(renovate): update renovate.json"

This reverts commit b14b20aa630a179c112f680afacc720095efd41d.

* Revert "chore(renovate): add NX renovate step"

This reverts commit a7e384c64b858b529b0606541eab9e0881f94591.

--- a/renovate.json
+++ b/renovate.json
@@ -4,27 +4,16 @@
   "rebaseWhen": "behind-base-branch",
   "packageRules": [
     {
-      "packagePatterns": ["^@swc/", "^storybook", "^@storybook/", "^@typescript-eslint/", "^@eslint/"],
+      "packagePatterns": ["^@nx/", "^@swc/", "^storybook", "^@storybook/", "^@typescript-eslint/", "^@eslint/"],
       "enabled": false
     },
     { "labels": ["📦 deps", "🤖 bot"], "matchPackagePatterns": ["*"] },
     {
       "labels": ["⚠️ major", "📦 deps", "🤖 bot"],
       "matchUpdateTypes": ["major"]
-    },
-    {
-      "packageNames": ["@nrwl/workspace"],
-      "packagePatterns": ["^@nrwl/", "nx", "^@nx/"],
-      "groupName": "NX workspace",
-      "postUpgradeTasks": {
-        "commands": [
-          "npx nx migrate latest --run-migrations --create-commits --commit-message='chore(repo): update @nx dependencies'"
-        ],
-        "fileFilters": ["**/**"]
-      }
     }
   ],
-  "ignoreDeps": ["react", "react-dom", "next", "@types/react", "@types/react-dom", "eslint"],
+  "ignoreDeps": ["nx", "react", "react-dom", "next", "@types/react", "@types/react-dom", "eslint"],
   "rangeStrategy": "pin",
   "prConcurrentLimit": 5
 }
