chore(deps): update nx

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:sanity": "nx run sanity:serve",
     "build": "nx build",
     "build:sanity": "nx run sanity:build && nx run sanity:deploy-graphql",
-    "test": "nx affected --base=origin/main --target=test --reporter=verbose",
+    "test": "nx affected --base=origin/main --target=test",
     "tsc": "tsc",
     "type-check": "nx run-many --target type-check --all",
     "lint": "nx affected --base=origin/main --target=lint",
@@ -42,18 +42,18 @@
   "devDependencies": {
     "@eslint/eslintrc": "2.1.2",
     "@eslint/js": "8.46.0",
-    "@nx/devkit": "17.2.3",
-    "@nx/eslint": "17.2.3",
-    "@nx/eslint-plugin": "17.2.3",
-    "@nx/js": "17.2.3",
-    "@nx/next": "17.2.3",
-    "@nx/plugin": "17.2.3",
-    "@nx/react": "17.2.3",
-    "@nx/storybook": "17.2.3",
-    "@nx/vite": "17.2.3",
-    "@nx/web": "17.2.3",
-    "@nx/webpack": "17.2.3",
-    "@nx/workspace": "17.2.3",
+    "@nx/devkit": "17.3.1",
+    "@nx/eslint": "17.3.1",
+    "@nx/eslint-plugin": "17.3.1",
+    "@nx/js": "17.3.1",
+    "@nx/next": "17.3.1",
+    "@nx/plugin": "17.3.1",
+    "@nx/react": "17.3.1",
+    "@nx/storybook": "17.3.1",
+    "@nx/vite": "17.3.1",
+    "@nx/web": "17.3.1",
+    "@nx/webpack": "17.3.1",
+    "@nx/workspace": "17.3.1",
     "@portabletext/types": "2.0.8",
     "@sanity/cli": "3.23.4",
     "@storybook/addon-backgrounds": "7.6.4",
@@ -68,14 +68,14 @@
     "@swc/helpers": "0.5.2",
     "@tailwindcss/typography": "0.5.10",
     "@testing-library/react": "14.1.2",
-    "@types/node": "18.19.3",
+    "@types/node": "18.16.9",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.9",
-    "@typescript-eslint/eslint-plugin": "6.13.2",
-    "@typescript-eslint/parser": "6.13.2",
+    "@typescript-eslint/eslint-plugin": "6.20.0",
+    "@typescript-eslint/parser": "6.20.0",
     "@vitejs/plugin-react-swc": "3.5.0",
-    "@vitest/coverage-v8": "0.34.6",
-    "@vitest/ui": "0.34.7",
+    "@vitest/coverage-v8": "1.2.2",
+    "@vitest/ui": "1.2.2",
     "autoprefixer": "10.4.16",
     "eslint": "8.48.0",
     "eslint-config-next": "14.0.4",
@@ -88,7 +88,7 @@
     "husky": "8.0.3",
     "jsdom": "23.0.1",
     "lint-staged": "15.2.0",
-    "nx": "17.2.3",
+    "nx": "17.3.1",
     "postcss": "8.4.32",
     "prettier": "3.1.1",
     "prettier-plugin-tailwindcss": "0.5.9",
@@ -99,7 +99,7 @@
     "vite": "5.0.10",
     "vite-plugin-eslint": "1.8.1",
     "vite-tsconfig-paths": "4.2.2",
-    "vitest": "0.34.6"
+    "vitest": "1.2.2"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,css,json,html,md}": "prettier --write"
