--- a/nx.json
+++ b/nx.json
@@ -35,10 +35,6 @@
       "inputs": ["production", "^production"],
       "cache": true
     },
-    "lint": {
-      "inputs": ["default", "{workspaceRoot}/.eslintrc.json", "{workspaceRoot}/eslint.config.js"],
-      "cache": true
-    },
     "build-storybook": {
       "inputs": [
         "default",
@@ -51,6 +47,10 @@
     },
     "@nx/vite:test": {
       "inputs": ["default", "^production"],
+      "cache": true
+    },
+    "@nx/eslint:lint": {
+      "inputs": ["default", "{workspaceRoot}/.eslintrc.json", "{workspaceRoot}/eslint.config.js"],
       "cache": true
     }
   },
