--- a/libs/ui/project.json
+++ b/libs/ui/project.json
@@ -44,7 +44,7 @@
     "type-check": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "yarn tsc -p libs/ui/tsconfig.lib.json --noEmit"
+        "command": "pnpm tsc -p libs/ui/tsconfig.lib.json --noEmit"
       }
     }
   }
