--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base"],
   "rebaseWhen": "behind-base-branch",
+  "schedule": ["before 5am"],
   "packageRules": [
     {
       "packagePatterns": ["^@nx/", "^@swc/", "^storybook", "^@storybook/", "^@typescript-eslint/", "^@eslint/"],
