chore: update renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -28,6 +28,8 @@
     "@types/react",
     "@types/react-dom",
     "eslint",
+    "pnpm",
+    "@swc-node/register",
     "vite-tsconfig-paths"
   ],
   "rangeStrategy": "pin",
