chore(deps): upgrade to storybook@8

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "nx run home:dev",
     "dev-all": "nx run home:dev-all",
+    "dev:sb": "nx run ui:storybook:dev",
     "start": "nx serve",
     "start:sanity": "nx run sanity:serve",
     "build": "nx build",
@@ -53,11 +54,11 @@
     "@nx/workspace": "18.3.4",
     "@portabletext/types": "2.0.13",
     "@sanity/cli": "3.39.1",
-    "@storybook/addon-backgrounds": "7.6.4",
-    "@storybook/addon-essentials": "7.6.4",
-    "@storybook/core-server": "7.6.4",
-    "@storybook/nextjs": "7.6.4",
-    "@storybook/react": "7.6.3",
+    "@storybook/addon-backgrounds": "^8.0.9",
+    "@storybook/addon-essentials": "^8.0.9",
+    "@storybook/core-server": "^8.0.9",
+    "@storybook/nextjs": "^8.0.9",
+    "@storybook/react": "^8.0.9",
     "@svgr/webpack": "8.1.0",
     "@swc-node/register": "~1.8.0",
     "@swc/cli": "~0.1.62",
@@ -89,7 +90,7 @@
     "postcss": "8.4.38",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.14",
-    "storybook": "7.6.4",
+    "storybook": "^8.0.9",
     "ts-node": "10.9.2",
     "typescript": "5.4.5",
     "url-loader": "4.1.1",
