--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "check": "turbo run check",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "sanity:deploy": "turbo run deploy --filter='./apps/sanity'"
   },
   "devDependencies": {
     "@binoy/eslint-config": "workspace:*",
