--- a/apps/sanity/package.json
+++ b/apps/sanity/package.json
@@ -7,6 +7,7 @@
     "dev": "sanity dev",
     "build": "sanity build",
     "preview": "sanity start",
+    "deploy": "sanity deploy",
     "lint": "eslint ."
   },
   "dependencies": {
