--- a/apps/sanity/package.json
+++ b/apps/sanity/package.json
@@ -9,8 +9,8 @@
     "preview": "sanity start",
     "deploy": "sanity deploy",
     "lint": "eslint .",
-    "extract": "sanity schema extract --workspace website --path '../web/src/lib/groq/sanity-schema.json'",
-    "typegen": "sanity typegen generate"
+    "extract": "sanity schema extract --workspace website --path '../web/src/lib/groq/sanity-schema.json' --enforce-required-fields",
+    "typegen": "pnpm run extract && sanity typegen generate"
   },
   "dependencies": {
     "@sanity/client": "6.18.0",
