--- a/apps/web/.prettierignore
+++ b/apps/web/.prettierignore
@@ -12,3 +12,7 @@ pnpm-lock.yaml
 package-lock.json
 yarn.lock
 vite.config.*.timestamp-*
+
+# Generated files
+/src/lib/groq/sanity-schema.json
+/src/lib/groq/sanity.types.ts
