chore(deos): upgrade turbo to v2

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "name": "binoy-io",
   "scripts": {
     "build": "turbo run build",
     "check": "turbo run check",
@@ -16,7 +17,7 @@
     "lint-staged": "15.2.7",
     "prettier": "3.3.2",
     "prettier-plugin-svelte": "3.2.5",
-    "turbo": "1.13.4"
+    "turbo": "2.0.5"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,css,json,html,md}": "prettier --write"
