fix: code cleanup

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "binoy-io",
+  "name": "binoy.io",
   "scripts": {
     "build": "turbo run build",
     "check": "turbo run check",
