chore: update maskable icons

--- a/apps/calculator-utils/static/manifest.json
+++ b/apps/calculator-utils/static/manifest.json
@@ -16,8 +16,7 @@
     {
       "src": "/icon-96x96.png",
       "sizes": "96x96",
-      "type": "image/png",
-      "purpose": "maskable"
+      "type": "image/png"
     },
     {
       "src": "/icon-128x128.png",
@@ -28,14 +27,12 @@
     {
       "src": "/icon-144x144.png",
       "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "maskable"
+      "type": "image/png"
     },
     {
       "src": "/icon-152x152.png",
       "sizes": "152x152",
-      "type": "image/png",
-      "purpose": "maskable"
+      "type": "image/png"
     },
     {
       "src": "/icon-192x192.png",
@@ -46,14 +43,12 @@
     {
       "src": "/icon-384x384.png",
       "sizes": "384x384",
-      "type": "image/png",
-      "purpose": "maskable"
+      "type": "image/png"
     },
     {
       "src": "/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
+      "type": "image/png"
     }
   ],
   "background_color": "#7E22CE",
